# sound_cut

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  README_cn.md  pyproject.toml  render.yaml  sound_cut-0.1.0-py3-none-any.whl  start.py
docs/superpowers/plans/: 2026-03-30-audio-silence-cut.md  2026-03-31-aggressive-analysis.md  2026-03-31-compressed-delivery-output.md  2026-04-01-adaptive-delivery-bitrate.md  2026-04-02-auto-volume-normalization.md  2026-04-02-independent-cut-and-volume.md  2026-04-03-offline-speech-enhancement.md  2026-04-10-auto-subtitle.md
docs/superpowers/specs/: 2026-03-30-audio-silence-cut-design.md  2026-03-31-aggressive-analysis-design.md  2026-03-31-audio-silence-cut-handoff.md  2026-03-31-compressed-delivery-output-design.md  2026-04-01-adaptive-delivery-bitrate-design.md  2026-04-01-current-state-handoff.md  2026-04-02-auto-volume-design.md  2026-04-02-independent-cut-and-volume-design.md  2026-04-03-offline-speech-enhancement-design.md  2026-04-03-video-sync-cut-design.md  2026-04-10-auto-subtitle-design.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
src/sound_cut/: api.py  cli.py  config.py  errors.py  ffmpeg_tools.py  models.py  pause_splitter.py  pipeline.py  render.py  timeline.py  vad.py  web.py
src/sound_cut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sound_cut/analysis/: __init__.py  pause_splitter.py  vad.py
src/sound_cut/core/: __init__.py  config.py  models.py  paths.py
tests/: conftest.py  helpers.py  test_cli.py  test_enhancement_backends.py  test_ffmpeg_tools.py  test_model_installer.py  test_model_locator.py  test_models.py  test_package_layout.py  test_pause_splitter.py  test_pipeline.py  test_render.py  test_subtitle_formatter.py  test_subtitle_pipeline.py  test_timeline.py  test_vad.py  test_web.py
tests/integration/: conftest.py  test_api_e2e.py
(+22 files in other folders)
