[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-cut"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "webrtcvad==2.0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
sound-cut = "sound_cut.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sound_cut.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
