[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sound-cut"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "flask>=3.0",
  "webrtcvad==2.0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
deepfilternet = [
  "deepfilternet>=0.5",
]
speechbrain = [
  "speechbrain>=1.0",
  "torch>=2.0",
  "torchaudio>=2.0",
]
demucs = [
  "demucs>=4.0",
]
subtitle = [
  "requests>=2.28",
]

[project.scripts]
sound-cut = "sound_cut.cli:main"
sound-cut-ui = "sound_cut.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sound_cut.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
